Delegated class loader for plugins